--- a/views/_template.css
+++ b/views/_template.css
@@ -65,7 +65,8 @@ body:focus {
     cursor: pointer;
     box-shadow: 0px 15px 20px rgba(54, 24, 79, 0.5);
     z-index: 3;
-    color: #695681;
+    color: #ae94ce;
+    /* color: #695681; */
     background-color: white;
     text-transform: uppercase;
     font-weight: 600;
