--- a/views/_template.css
+++ b/views/_template.css
@@ -88,26 +88,8 @@ body:focus {
     color: white;
 }
 
-/* .text-white {
-    color: #fff;
+.btn:disabled , .btn:disabled:hover{
+    box-shadow: 0px 10px 10px -10px rgba(54, 24, 79, 0.5);
+    background: rgba(128, 128, 128, 0.766);
+    color: #bcbcbc;
 }
-
-.text-xl {
-    font-size: 1.25rem;
-    line-height: 1.75rem;
-}
-
-.text-3xl {
-    font-size: 3rem;
-    line-height: 1;
-}
-
-.text-6xl {
-    font-size: 3.75rem;
-    line-height: 1;
-}
-
-.text-8xl {
-    font-size: 6rem;
-    line-height: 1;
-} */
