--- a/views/_tailwinds.css
+++ b/views/_tailwinds.css
@@ -568,12 +568,32 @@ video {
   bottom: 0px
 }
 
+.left-0{
+  left: 0px
+}
+
 .right-0{
   right: 0px
 }
 
 .top-1\/2{
   top: 50%
+}
+
+.top-1\/4{
+  top: 25%
+}
+
+.z-\[100\]{
+  z-index: 100
+}
+
+.z-\[50\]{
+  z-index: 50
+}
+
+.z-\[999\]{
+  z-index: 999
 }
 
 .m-2{
@@ -599,8 +619,16 @@ video {
   margin-bottom: 1rem
 }
 
+.mb-2{
+  margin-bottom: 0.5rem
+}
+
 .mt-2{
   margin-top: 0.5rem
+}
+
+.mt-4{
+  margin-top: 1rem
 }
 
 .block{
@@ -619,8 +647,20 @@ video {
   display: none
 }
 
+.h-\[150px\]{
+  height: 150px
+}
+
 .h-\[60px\]{
   height: 60px
+}
+
+.h-min{
+  height: min-content
+}
+
+.h-screen{
+  height: 100vh
 }
 
 .min-h-\[100px\]{
@@ -631,12 +671,28 @@ video {
   min-height: 100vh
 }
 
+.min-h-\[30vh\]{
+  min-height: 30vh
+}
+
+.w-1\/12{
+  width: 8.333333%
+}
+
+.w-10\/12{
+  width: 83.333333%
+}
+
 .w-\[30px\]{
   width: 30px
 }
 
 .w-\[350px\]{
   width: 350px
+}
+
+.w-\[40px\]{
+  width: 40px
 }
 
 .w-\[60px\]{
@@ -651,9 +707,41 @@ video {
   width: 100%
 }
 
+.w-screen{
+  width: 100vw
+}
+
+.min-w-\[40px\]{
+  min-width: 40px
+}
+
+.min-w-\[60px\]{
+  min-width: 60px
+}
+
+.min-w-\[90vw\]{
+  min-width: 90vw
+}
+
 .-translate-y-1\/2{
   --tw-translate-y: -50%;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y))
+}
+
+.cursor-default{
+  cursor: default
+}
+
+.cursor-pointer{
+  cursor: pointer
+}
+
+.flex-col{
+  flex-direction: column
+}
+
+.flex-wrap{
+  flex-wrap: wrap
 }
 
 .flex-nowrap{
@@ -664,12 +752,40 @@ video {
   place-items: center
 }
 
+.items-end{
+  align-items: flex-end
+}
+
+.items-center{
+  align-items: center
+}
+
+.justify-center{
+  justify-content: center
+}
+
+.justify-between{
+  justify-content: space-between
+}
+
 .gap-1{
   gap: 0.25rem
 }
 
+.gap-2{
+  gap: 0.5rem
+}
+
 .overflow-hidden{
   overflow: hidden
+}
+
+.break-all{
+  word-break: break-all
+}
+
+.rounded{
+  border-radius: 0.25rem
 }
 
 .rounded-full{
@@ -678,6 +794,19 @@ video {
 
 .rounded-md{
   border-radius: 0.375rem
+}
+
+.rounded-sm{
+  border-radius: 0.125rem
+}
+
+.rounded-r-md{
+  border-top-right-radius: 0.375rem;
+  border-bottom-right-radius: 0.375rem
+}
+
+.border-2{
+  border-width: 2px
 }
 
 .border-transparent{
@@ -689,18 +818,46 @@ video {
   background-color: rgb(174 148 206 / var(--tw-bg-opacity))
 }
 
+.bg-red-500{
+  --tw-bg-opacity: 1;
+  background-color: rgb(239 68 68 / var(--tw-bg-opacity))
+}
+
+.bg-slate-100{
+  --tw-bg-opacity: 1;
+  background-color: rgb(241 245 249 / var(--tw-bg-opacity))
+}
+
+.bg-slate-100\/10{
+  background-color: rgb(241 245 249 / 0.1)
+}
+
+.bg-slate-200{
+  --tw-bg-opacity: 1;
+  background-color: rgb(226 232 240 / var(--tw-bg-opacity))
+}
+
 .bg-white{
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity))
+}
+
+.p-2{
+  padding: 0.5rem
 }
 
 .p-4{
   padding: 1rem
 }
 
-.px-2{
-  padding-left: 0.5rem;
-  padding-right: 0.5rem
+.px-4{
+  padding-left: 1rem;
+  padding-right: 1rem
+}
+
+.py-2{
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem
 }
 
 .py-3{
@@ -708,13 +865,46 @@ video {
   padding-bottom: 0.75rem
 }
 
+.py-4{
+  padding-top: 1rem;
+  padding-bottom: 1rem
+}
+
+.py-6{
+  padding-top: 1.5rem;
+  padding-bottom: 1.5rem
+}
+
+.pl-2{
+  padding-left: 0.5rem
+}
+
+.pl-3{
+  padding-left: 0.75rem
+}
+
 .text-center{
   text-align: center
+}
+
+.text-2xl{
+  font-size: 1.5rem;
+  line-height: 2rem
+}
+
+.text-4xl{
+  font-size: 2.25rem;
+  line-height: 2.5rem
 }
 
 .text-8xl{
   font-size: 6rem;
   line-height: 1
+}
+
+.text-lg{
+  font-size: 1.125rem;
+  line-height: 1.75rem
 }
 
 .text-xl{
@@ -730,6 +920,18 @@ video {
   font-weight: 600
 }
 
+.uppercase{
+  text-transform: uppercase
+}
+
+.capitalize{
+  text-transform: capitalize
+}
+
+.tracking-\[2rem\]{
+  letter-spacing: 2rem
+}
+
 .text-gray-500{
   --tw-text-opacity: 1;
   color: rgb(107 114 128 / var(--tw-text-opacity))
@@ -740,9 +942,29 @@ video {
   color: rgb(55 65 81 / var(--tw-text-opacity))
 }
 
+.text-slate-100{
+  --tw-text-opacity: 1;
+  color: rgb(241 245 249 / var(--tw-text-opacity))
+}
+
+.text-slate-400{
+  --tw-text-opacity: 1;
+  color: rgb(148 163 184 / var(--tw-text-opacity))
+}
+
 .text-white{
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity))
+}
+
+.opacity-80{
+  opacity: 0.8
+}
+
+.shadow{
+  --tw-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow)
 }
 
 .shadow-inner{
@@ -757,12 +979,90 @@ video {
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow)
 }
 
+.shadow-sm{
+  --tw-shadow: 0 1px 2px 0 rgb(0 0 0 / 0.05);
+  --tw-shadow-colored: 0 1px 2px 0 var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow)
+}
+
+.backdrop-blur{
+  --tw-backdrop-blur: blur(8px);
+  -webkit-backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
+          backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia)
+}
+
 .duration-200{
   transition-duration: 200ms
 }
 
+.duration-300{
+  transition-duration: 300ms
+}
+
+.hover\:w-\[40px\]:hover{
+  width: 40px
+}
+
+.hover\:bg-\[\#ae94ce\]:hover{
+  --tw-bg-opacity: 1;
+  background-color: rgb(174 148 206 / var(--tw-bg-opacity))
+}
+
+.hover\:bg-red-600:hover{
+  --tw-bg-opacity: 1;
+  background-color: rgb(220 38 38 / var(--tw-bg-opacity))
+}
+
+.hover\:bg-slate-100:hover{
+  --tw-bg-opacity: 1;
+  background-color: rgb(241 245 249 / var(--tw-bg-opacity))
+}
+
+.hover\:bg-slate-300:hover{
+  --tw-bg-opacity: 1;
+  background-color: rgb(203 213 225 / var(--tw-bg-opacity))
+}
+
+.hover\:pl-3:hover{
+  padding-left: 0.75rem
+}
+
+.hover\:text-xl:hover{
+  font-size: 1.25rem;
+  line-height: 1.75rem
+}
+
+.hover\:text-white:hover{
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity))
+}
+
+.hover\:shadow-md:hover{
+  --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow)
+}
+
 .active\:bg-\[\#fb8a8ac5\]:active{
   background-color: #fb8a8ac5
+}
+
+.active\:bg-slate-100\/70:active{
+  background-color: rgb(241 245 249 / 0.7)
+}
+
+.active\:opacity-80:active{
+  opacity: 0.8
+}
+
+.group:hover .group-hover\:bg-\[\#ae94ce\]{
+  --tw-bg-opacity: 1;
+  background-color: rgb(174 148 206 / var(--tw-bg-opacity))
+}
+
+.group:hover .group-hover\:text-white{
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity))
 }
 
 @media (min-width: 768px){
@@ -772,5 +1072,23 @@ video {
 
   .md\:hidden{
     display: none
+  }
+
+  .md\:min-h-\[300px\]{
+    min-height: 300px
+  }
+
+  .md\:w-1\/2{
+    width: 50%
+  }
+
+  .md\:min-w-\[500px\]{
+    min-width: 500px
+  }
+}
+
+@media (min-width: 1024px){
+  .lg\:w-1\/3{
+    width: 33.333333%
   }
 }
